# flaskBlog

./: .gitignore  README.md  app.py  models.py  pyproject.toml  testdata.py
Accounts/: __init__.py
Accounts/routes/: login.py
Admin/: __init__.py
Admin/routes/: accounts.py  categories.py  index.py  posts.py  setting.py  tags.py
base/: __init__.py
base/routes/: category.py  home.py  post.py  redirect.py  search.py  tag.py
database/: db.py  models.py
install/: __init__.py
templates/: base.html  categories.html  category.html  login.html  post.html  search.html  search_result.html  tag.html  tags.html
templates/admin/: account.html  base.html  index.html  setting.html
templates/admin/categories/: categories.html  editcategory.html  newcategory.html
templates/admin/posts/: editpost.html  newpost.html  posts.html
templates/admin/tags/: edittag.html  newtag.html  tags.html
templates/install/: index.html
