[tool.poetry]
name = "MyBlog"
version = "0.0.1"
description = "Blog using Flask"
authors = ["Nesquate <nesquate.100001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
